Fibonacci and hello world examples working, no react hooks

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "author": "Phil Eaton <phil@eatonphil.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-syntax-bigint": "^7.4.4",
     "parcel-bundler": "^1.12.3",
     "react": "^16.0.0",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
     "typescript": "^3.4.4"
   },
   "browserslist": [
