--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
       - run:
           name: Install debian-packaged dependencies
           command: |
-            apt install -y curl apt-transport-https python build-essential
+	    apt update
+            apt install -y curl apt-transport-https
             curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
             echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
             apt update && apt install -y yarn
