Use byte addressing, add more pointers, add more registers (#2)
* Add real byte addressing, more pointer sizes, more registers

* Start tests

* Update

* Prettier test

* Some more calls correctly

* Tests working, sys_exit concerts bigint to number

* Prettier

* Update before install

* Untabify circleci config

* Build before test

* Tabify

* Untabify

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@babel/plugin-syntax-bigint": "^7.4.4",
     "parcel-bundler": "^1.12.3",
+    "prettier": "^1.17.1",
     "react": "^16.0.0",
     "react-dom": "^16.8.6"
   },
@@ -21,6 +22,8 @@
   "scripts": {
     "build-cli": "tsc --allowJs --outDir dist emulator/index.js",
     "build-app": "parcel app/index.html",
-    "build": "yarn build-cli && yarn build-app"
+    "build": "yarn build-cli && yarn build-app",
+    "lint:fix": "prettier --write 'emulator/**' 'scripts/**'",
+    "test": "node ./scripts/test.js"
   }
 }
