--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.1",
     "react": "^16.0.0",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "safer-eval": "^1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
