--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/plugin-syntax-bigint": "^7.4.4",
-    "parcel-bundler": "^1.12.3",
+    "core-js": "^3",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.17.1",
     "react": "^16.0.0",
     "react-dom": "^16.8.6",
