--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.17.1",
     "react": "^16.0.0",
-    "react-dom": "^16.8.6",
-    "safer-eval": "^1.3.4"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
